added added users and using optional

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:file:./data/testdb3
+    url: jdbc:h2:file:./data/testdb
     username: name
     password: password
   sql:
