--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,8 @@
 spring:
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:file:./data/testdb
-    username: name
-    password: password
-  sql:
-    init:
-      schema-locations: classpath:schema.sql
-      mode: always
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: mysecretpassword
+    driver-class-name: org.postgresql.Driver
+  flyway:
+    locations: classpath:db/migration/
